Reducing size of tarball

--- a/inst/library.bib
+++ b/inst/library.bib
@@ -1,5 +1,5 @@
 @misc{PCAtools,
-  author = {Blighe K, Lewis M},
+  author = {Blighe K},
   title = {{PCAtools: everything Principal Components Analysis.}},
   year = 2018,
   howpublished = {\url{https://github.com/kevinblighe}}
