--- a/vignettes/PCAtools.Rmd
+++ b/vignettes/PCAtools.Rmd
@@ -165,7 +165,7 @@ Conduct principal components analysis (PCA)
 ## Plot the component loadings and label genes most responsible for variation
 
 
-```{r ex4, fig.height = 7, fig.width = 9, fig.cap = 'Basic loadings plot.'}
+```{r ex4, fig.height = 6, fig.width = 8, fig.cap = 'Basic loadings plot.'}
 
   plotloadings(p)
 
@@ -175,7 +175,7 @@ Conduct principal components analysis (PCA)
 ## Correlate PCs to metadata variables
 
 
-```{r ex5, fig.height = 5, fig.width = 9, fig.cap = 'Basic eigencor plot.'}
+```{r ex5, fig.height = 4, fig.width = 8, fig.cap = 'Basic eigencor plot.'}
 
   eigencorplot(p,
     metavars = c('Age','Distant.RFS','ER','GGI','Grade','Size','Time.RFS'))
@@ -225,7 +225,7 @@ In a bi-plot, we can shade the points by different groups and add many more feat
 
 ### Colour by a factor from the metadata, add lines through center, and add legend
 
-```{r ex7, fig.height = 7, fig.width = 9, fig.cap = 'Advanced bi-plot I.'}
+```{r ex7, fig.height = 6, fig.width = 8, fig.cap = 'Advanced bi-plot I.'}
 
   biplot(p,
 
@@ -239,7 +239,7 @@ In a bi-plot, we can shade the points by different groups and add many more feat
 
 ### Supply custom colours, add more lines, and increase legend size
 
-```{r ex8, fig.height = 8, fig.width = 8, fig.cap = 'Advanced bi-plot II.'}
+```{r ex8, eval = FALSE, fig.height = 7, fig.width = 7, fig.cap = 'Advanced bi-plot II.'}
 
   biplot(p,
 
@@ -253,7 +253,7 @@ In a bi-plot, we can shade the points by different groups and add many more feat
 
 ### Change shape based on tumour grade, remove connectors, and add titles
 
-```{r ex9, fig.height = 8, fig.width = 8, fig.cap = 'Advanced bi-plot III.'}
+```{r ex9, fig.height = 7, fig.width = 7, fig.cap = 'Advanced bi-plot III.'}
 
   biplot(p,
 
@@ -275,7 +275,7 @@ In a bi-plot, we can shade the points by different groups and add many more feat
 
 ### Remove labels, modify line types, remove gridlines, and increase point size
 
-```{r ex10, fig.height = 7, fig.width = 9, fig.cap = 'Advanced bi-plot IV.'}
+```{r ex10, fig.height = 6, fig.width = 8, fig.cap = 'Advanced bi-plot IV.'}
 
   biplot(p,
 
@@ -305,7 +305,7 @@ In a bi-plot, we can shade the points by different groups and add many more feat
 
 ### Colour by a continuous variable (colour controlled by ggplot2 engine); plot other PCs
 
-```{r ex11, fig.height = 7, fig.width = 9, fig.cap = 'Advanced bi-plot V.'}
+```{r ex11, eval = FALSE, fig.height = 6, fig.width = 8, fig.cap = 'Advanced bi-plot V.'}
 
   biplot(p, x = 'PC10', y = 'PC50',
 
@@ -346,7 +346,7 @@ can shut off titles and axis labeling to save space. Reducing point size and
 colouring by a variable of interest can additionally help us to rapidly skim
 over the data.
 
-```{r ex12, fig.height = 9, fig.width = 8, fig.cap = 'Advanced pairs plot I.'}
+```{r ex12, eval = FALSE, fig.height = 8, fig.width = 7, fig.cap = 'Advanced pairs plot I.'}
 
   pairsplot(p,
 
@@ -374,11 +374,11 @@ setting 'triangle = FALSE'. In this case, we can further control the layout
 with the 'ncol' and 'nrow' parameters, although, the function will
 automatically determine these based on your input data.
 
-```{r ex13, fig.height = 8, fig.width = 12, fig.cap = 'Advanced pairs plot II.'}
+```{r ex13, eval = FALSE, fig.height = 6, fig.width = 9, fig.cap = 'Advanced pairs plot II.'}
 
   pairsplot(p,
 
-    components = getComponents(p, c(1,5,10,15,20,25,30,35,70)),
+    components = getComponents(p, c(1,5,10,15,20,25)),
 
     triangle = FALSE,
 
@@ -414,7 +414,7 @@ cut-off for inclusion / exclusion of variables, we use 'rangeRetain', where
 0.01 equates to the top/bottom 1% of the loadings range per PC. We can also
 add a title, subtitle, and caption, and alter the shape and colour scheme.
 
-```{r ex14, fig.height = 7, fig.width = 10, fig.cap = 'Advanced plotloadings I'}
+```{r ex14, fig.height = 6, fig.width = 9, fig.cap = 'Advanced plotloadings I'}
 
   plotloadings(p,
 
@@ -466,7 +466,7 @@ With the loadings plot, in addition, we can instead plot absolute values and
 modify the point sizes to be proportional to the loadings. We can also switch
 off the line connectors and plot the loadings for any PCs
 
-```{r ex15, fig.height = 9, fig.width = 11, fig.cap = 'Advanced plotloadings II'}
+```{r ex15, eval = FALSE, fig.height = 9, fig.width = 11, fig.cap = 'Advanced plotloadings II'}
 
   plotloadings(p,
 
@@ -545,7 +545,7 @@ can be found there.
 We can also supply different cut-offs for statistical significance, plot
 R-squared values, and specify correlation method:
 
-```{r ex17, fig.height = 5, fig.width = 12, fig.cap = 'Advanced eigencorplot I.'}
+```{r ex17, eval = FALSE, fig.height = 5, fig.width = 12, fig.cap = 'Advanced eigencorplot I.'}
 
   eigencorplot(p,
 
@@ -594,7 +594,7 @@ just a bi-plot used to identify outliers!
 
 
 
-```{r ex18, fig.height = 10, fig.width = 15, fig.cap = 'Plot multiple plots on the same page.'}
+```{r ex18, eval = FALSE, fig.height = 10, fig.width = 15, fig.cap = 'Plot multiple plots on the same page.'}
 
   pscree <- screeplot(p, components = getComponents(p, 1:30),
     hline = 80, vline = 27, axisLabSize = 10, returnPlot = FALSE) +
