--- a/library.bib
+++ b/library.bib
@@ -1,12 +1,12 @@
 @misc{PCAtools,
-  author = {Blighe K, Lewis M},
+  author = {Blighe, Kevin and Lewis, Myles},
   title = {{PCAtools: everything Principal Components Analysis.}},
   year = 2018,
   howpublished = {\url{https://github.com/kevinblighe}}
 }
 
 @article{BligheK,
-  author = {Blighe K},
+  author = {Blighe, Kevin},
   title = {{Haplotype classification using copy number variation and principal components analysis.}},
   year = 2013,
   howpublished = {The Open Bioinformatics Journal 7:19-24}
