--- a/library.bib
+++ b/library.bib
@@ -1,13 +1,34 @@
 @misc{PCAtools,
-  author = {Blighe, Kevin and Lewis, Myles},
+  author = {K Blighe and M Lewis and A Lun},
   title = {{PCAtools: everything Principal Components Analysis.}},
   year = 2018,
   howpublished = {\url{https://github.com/kevinblighe}}
 }
 
 @article{BligheK,
-  author = {Blighe, Kevin},
+  author = {K Blighe},
   title = {{Haplotype classification using copy number variation and principal components analysis.}},
   year = 2013,
   howpublished = {The Open Bioinformatics Journal 7:19-24}
+}
+
+@article{Horn,
+  author = {JL Horn},
+  title = {{A rationale and test for the number of factors in factor analysis.}},
+  year = 1965,
+  howpublished = {Psychometrika 30(2), 179-185.}
+}
+
+@article{Buja,
+  author = {A Buja and N Eyuboglu},
+  title = {{Remarks on Parallel Analysis.}},
+  year = 1992,
+  howpublished = {Multivariate Behav. Res. 27, 509-40.}
+}
+
+@article{Lun,
+  author = {A Lun},
+  title = {{BiocSingular: Singular Value Decomposition for Bioconductor Packages.}},
+  year = 2019,
+  howpublished = {R package version 1.0.0, https://github.com/LTLA/BiocSingular.}
 }
