--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 package: "`r packageVersion('PCAtools')`"
 output:
   github_document:
-    toc: true
+    toc: false
     toc_depth: 3
 fig_width: 7
 bibliography: library.bib
