--- a/README.Rmd
+++ b/README.Rmd
@@ -22,31 +22,6 @@ Principal Component Analysis (PCA) is a very powerful technique that has wide ap
 
 *PCAtools* provides functions for data exploration via PCA, and allows the user to generate publication-ready figures. PCA is performed via *BiocSingular* [@Lun] - users can also identify optimal number of principal components via different metrics, such as elbow method and Horn's parallel analysis [@Horn] [@Buja], which has relevance for data reduction in single-cell RNA-seq (scRNA-seq) and high dimensional mass cytometry data.
 
-# Availability
-
- - Release version: [PCAtools](https://www.bioconductor.org/packages/release/bioc/html/PCAtools.html)
-
- - Development version: [PCAtools](https://www.bioconductor.org/packages/devel/bioc/html/PCAtools.html)
-
- - Vignette: [PCAtools: everything Principal Component Analysis
-](https://bioconductor.org/packages/release/bioc/vignettes/PCAtools/inst/doc/PCAtools.html)
-
-
----
-
----
-
-
-# GitHub vignette
-
-```{r, echo=FALSE}
-
-    library(knitr)
-
-    opts_chunk$set(tidy = FALSE, message = FALSE, warning = FALSE)
-
-```
-
 # Installation
 
 ## 1. Download the package from Bioconductor
@@ -405,7 +380,7 @@ We can check the genes to which these relate by using biomaRt:
 
   library(biomaRt)
 
-  mart <- useMart('ENSEMBL_MART_ENSEMBL')
+  mart <- useMart('ENSEMBL_MART_ENSEMBL', host = 'useast.ensembl.org')
   mart <- useDataset('hsapiens_gene_ensembl', mart)
 
   getBM(mart = mart,
